src/screens/About/About.module.scss
.about {
  position: relative;
  padding-bottom: 3rem;

  .booble,
  .booble_2 {
    position: absolute;
    width: 15rem;
  }

  .booble {
    top: 0;
    left: 0;
    box-shadow: -15rem 15rem 20rem 5rem $blue;
  }
  .booble_2 {
    bottom: 0;
    right: 0;
    box-shadow: 15rem -15rem 20rem 5rem $blue;
  }

  main {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 10rem;
    gap: 5rem;
  }

  .avatar {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25rem;
    border-radius: 50%;
    overflow: hidden;
    box-shadow: 0 4px 24px rgba($blue, 0.3);

    img {
      width: 100%;
      height: 100%;
      object-fit: contain;
      border-radius: 50%;
      transition:
        transform 0.3s ease,
        border-radius 0.3s ease;

      &:hover {
        transform: scale(1.2);
      }
    }
  }

  section {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    gap: 1.5rem;
    padding: 2rem;
    width: 100%;
    background: $gray-opacity;
    border-radius: 1rem;

    .info {
      display: flex;
      flex-direction: column;
      gap: 1rem;
      width: 100%;

      .item {
        display: flex;
        align-items: center;
        gap: 0.5rem;

        .icon {
          color: $blue;
        }

        span:last-child {
          font-weight: bold;
        }
      }
    }

    .btnCv {
      padding: 0.7rem 1.5rem;
      border-radius: 2rem;
      font-family: $font-roboto;
      font-size: 1rem;
      background-color: $white;
      color: $black;
      transition:
        background-color 0.3s ease,
        color 0.3s ease;

      &:hover {
        background-color: $black;
        color: $blue;
      }
    }
  }
}

